# chemistry-utility

./: .editorconfig  .gitignore  .lighthouserc.json  README.md  app.go  go.mod  go.sum  index-app.html  index.html  main.go  main_test.go  package-lock.json  package.json  postcss.config.js  ptable.json  ptable_service.go  render.js  render.min.js  reuseport_other.go  reuseport_windows.go  script.js  script.min.js  server.js  server.ts  sitemap.xml  style.css  style.min.css  terser.config.json  tsconfig.json  tsconfig.server.json  vite.config.js  vite.config.ts  vitest.config.ts  wails.json
.github/workflows/: test.yml
cmd/server/: main.go
frontend/: eslint.config.js  index-app.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: accessibility.spec.ts  calculator-workflows.spec.ts  navigation.spec.ts
modules/: animationUtils.full.js  animationUtils.js  bondPredictor.full.js  bondPredictor.js  electrochemistryCalculators.full.js  electrochemistryCalculators.js  equationBalancer.full.js  equationBalancer.js  eventListeners.full.js  eventListeners.js  formulaParser.full.js  formulaParser.js  gasLawCalculators.full.js  gasLawCalculators.js  solutionCalculators.full.js  solutionCalculators.js  stoichiometryCalculator.full.js  stoichiometryCalculator.js  uiHandlers.full.js  uiHandlers.js
public/: favicon.icns
src/: render.js  render.test.ts  render.ts  script.js  script.test.ts  script.ts  style-app.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+123 files in other folders)
